--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets": ["react"]
+  "presets": ["es2015", "stage-0", "react"],
+  "plugins": [
+    "babel-plugin-transform-decorators-legacy",
+    "babel-plugin-syntax-async-functions",
+    "babel-plugin-transform-regenerator"
+  ]
 }
