--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
+    "clean": "rm -rf build installer-win32-x64 rencar-win32-x64",
     "start": "electron .",
     "build": "./node_modules/.bin/webpack",
     "watch": "./node_modules/.bin/webpack-dev-server --hot --inline",
-    "packaging": "electron-packager ./ rencar --platform=win32 --arch x64"
+    "packaging": "electron-packager ./ rencar --platform=win32 --arch x64",
+    "test": "npm run build && npm run start"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -22,13 +24,27 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-regenerator": "^6.16.1",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "electron": "^1.4.1",
     "electron-packager": "^8.2.0",
     "electron-winstaller": "^2.3.4",
+    "webpack": "^1.13.3"
+  },
+  "dependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "webpack": "^1.13.3"
+    "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-form": "^6.2.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0"
   }
 }
