--- a/package.json
+++ b/package.json
@@ -31,13 +31,21 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.25.0",
     "electron": "^1.4.1",
     "electron-packager": "^8.2.0",
     "electron-winstaller": "^2.3.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.11.2",
+    "resolve-url": "^0.2.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.3.2",
+    "react-css-modules": "^3.7.10",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
